--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -1,4 +1,13 @@
 # Aug 1st, 2020
+## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
+### - To update or push updates to GitHub, just copy the top title and tag with the “—“
+## [[Morning Pages]]
+## [[Create]]
+## [[Connect]]
+## [[Consume]]
+## [[Cerebrate]]
+## [[Coordinate]]
+## [[Consolidate]]
 # Aug 2nd, 2020
 # Aug 3rd, 2020
 # Aug 4th, 2020
