--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -2,7 +2,9 @@
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ### - To update or push updates to GitHub, just copy the top title and tag with the “—“
 ## [[Morning Pages]]
+### I really want to get the [[CrashBoards International]] speech. That is on my mind. Moreover, I want this dat ti be something that I keep for 'housekeeping'. lol.
 ## [[Create]]
+### [[Crashboards International]] start-up pitch #speech
 ## [[Connect]]
 ## [[Consume]]
 ## [[Cerebrate]]
