Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -7,12 +7,14 @@
 ### There is a perticular incidence that I want to reveal. This event made my heart feel #warm from the inside.
 ### 
 ## [[Create]]
-### [[Crashboards International]] start-up pitch #speech
+### TODO [[Crashboards International]] start-up pitch #speech
 ## [[Connect]]
+### TODO YPD broth request
 ## [[Consume]]
 ## [[Cerebrate]]
 ## [[Coordinate]]
 ## [[Consolidate]]
+### TODO #NIBBLE for [[Biology IA]]
 # Aug 2nd, 2020
 # Aug 3rd, 2020
 # Aug 4th, 2020
