Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -6,6 +6,9 @@
 ### I like the way how I just changed the topic. I am a master at this
 ### There is a perticular incidence that I want to reveal. This event made my heart feel #warm from the inside.
 #### This event includes Riddhi. I am not sure if I am spelling out her name right, but what a hero!
+#### So on [[Jul 30th, 2020]] I was in the lab alone. It had been the best part of 30 minutes. Just then there was a knock on the glass window. I saw Riddhi, and then with questionable eyes, she gave me a thumbs up.
+#### Absolutly pleased, I left my work then and there, and I opened the now locked door, went out and asked her how she is.
+#### I have been willing to message her "Hey dude, your warm action really warmed up my heart! Thank you!"
 ## [[Create]]
 ### TODO [[Crashboards International]] start-up pitch #speech
 ## [[Connect]]
