Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -11,10 +11,10 @@
 #### I have been willing to message her "Hey dude, your warm action really warmed up my heart! Thank you!"
 ## [[Create]]
 ### TODO [[Crashboards International]] start-up pitch #speech
+#### I did the first draft. Not very happy with it.
 ## [[Connect]]
 ### TODO YPD broth request
 ## [[Consume]]
-### [[https://cdn.logseq.com/%2F240555e0-d70c-43d3-8acf-e4c746692cd92020_08_01_b707eb09aa2a5f709afb43bbe4f23376.png?Expires=4749860673&Signature=WMHFXwJNKyLqDNk2cxp~JB-S6xUHEcG49yAp7WzBWWazT0pxSkvWr8yC7sonwKBy31MhLnyP7IUwb30y7vSa5ETLUKczYu0fPYDXF~Ab83TMuMir9BbYsHpxUKwwJebc60rPdZrWWMhWVL0ggdEZjVN1GWe69dzE59nU3dXDYecZ2b7hmSDzZLSqp5dssUUy4QT8A2XzWZq3aq~ONb7bUKW4xWT2no6TiK7BIfaV7hZB5k7QBfBgHYU5tAjBv6N8tmcJzFeCNzZDu5dJuK9ZX3gdxzezOnMdEjAkX97cxpHw-lm2KYy0WbwE2vXMSB8aKpxV5nfoSDxBpeDD7npn0w__&Key-Pair-Id=APKAJE5CCD6X7MP6PTEA][2020_08_01_b707eb09aa2a5f709afb43bbe4f23376.png]] 
 ## [[Cerebrate]]
 ## [[Coordinate]]
 ## [[Consolidate]]
