--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -9,14 +9,15 @@
 #### So on [[Jul 30th, 2020]] I was in the lab alone. It had been the best part of 30 minutes. Just then there was a knock on the glass window. I saw Riddhi, and then with questionable eyes, she gave me a thumbs up.
 #### Absolutly pleased, I left my work then and there, and I opened the now locked door, went out and asked her how she is.
 #### I have been willing to message her "Hey dude, your warm action really warmed up my heart! Thank you!"
+### What a LOL, I read 110 pages of [[Book - Rich Dad Poor Dad]] today, and what a riveting read! I am literally $$\frac{1}{4}$$th of the way there and I could not be more excited!
 ## [[Create]]
 ### TODO [[Crashboards International]] start-up pitch #speech
 
 
-#### I did the first draft. Not very happy with it.
 ## [[Connect]]
 ### TODO YPD broth request
 ## [[Consume]]
+### Started. reading [[Book - Rich Dad Poor Dad]] by [[Robert T. Kiyosaki]]
 ## [[Cerebrate]]
 ## [[Coordinate]]
 ## [[Consolidate]]
