Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -7,7 +7,7 @@
 ### There is a perticular incidence that I want to reveal. This event made my heart feel #warm from the inside.
 #### This event includes Riddhi. I am not sure if I am spelling out her name right, but what a hero!
 #### So on [[Jul 30th, 2020]] I was in the lab alone. It had been the best part of 30 minutes. Just then there was a knock on the glass window. I saw Riddhi, and then with questionable eyes, she gave me a thumbs up.
-#### Absolutly pleased, I left my work then and there, and I opened the now locked door, went out and asked her how she is.
+#### Absolutely pleased, I left my work then and there, and I opened the now locked door, went out and asked her how she is.
 #### I have been willing to message her "Hey dude, your warm action really warmed up my heart! Thank you!"
 ### What a LOL, I read 110 pages of [[Book - Rich Dad Poor Dad]] today, and what a riveting read! I am literally $$\frac{1}{4}$$th of the way there and I could not be more excited!
 ## [[Create]]
@@ -16,8 +16,11 @@
 
 ## [[Connect]]
 ### TODO YPD broth request
+### [[Supriyo Uncle]] class set for [[Aug 2nd, 2020]] 
+### TODO Message [[Pandey Sir]] for hindi class online
 ## [[Consume]]
 ### Started. reading [[Book - Rich Dad Poor Dad]] by [[Robert T. Kiyosaki]]
+### [[Latha Ma'am]] class
 ## [[Cerebrate]]
 ## [[Coordinate]]
 ## [[Consolidate]]
