Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -11,8 +11,7 @@
 #### I have been willing to message her "Hey dude, your warm action really warmed up my heart! Thank you!"
 ### What a LOL, I read 110 pages of [[Book - Rich Dad Poor Dad]] today, and what a riveting read! I am literally $$\frac{1}{4}$$th of the way there and I could not be more excited!
 ## [[Create]]
-### TODO [[Crashboards International]] start-up pitch #speech
-
+### DONE [[Crashboards International]] start-up pitch #speech outline
 
 ## [[Connect]]
 ### TODO YPD broth request
