Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -14,7 +14,9 @@
 ### DONE [[Crashboards International]] start-up pitch #speech outline
 
 ## [[Connect]]
-### TODO YPD broth request on [[Aug 3rd, 2020]] 
+### NOW YPD broth request on [[Aug 3rd, 2020]] 
+
+
 ### [[Supriyo Uncle]] class set for [[Aug 2nd, 2020]] 
 ### TODO Message [[Pandey Sir]] for hindi class online
 ## [[Consume]]
