Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -20,7 +20,7 @@
 ### [[Supriyo Uncle]] class set for [[Aug 2nd, 2020]] 
 ### TODO Message [[Pandey Sir]] for hindi class online
 ## [[Consume]]
-### Started. reading [[Book - Rich Dad Poor Dad]] by [[Robert T. Kiyosaki]]
+### Started reading [[Book - Rich Dad Poor Dad]] by [[Robert T. Kiyosaki]]
 ### [[Latha Ma'am]] class
 ## [[Cerebrate]]
 ## [[Coordinate]]
