Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -12,7 +12,7 @@
 ### What a LOL, I read 110 pages of [[Book - Rich Dad Poor Dad]] today, and what a riveting read! I am literally $$\frac{1}{4}$$th of the way there and I could not be more excited!
 ## [[Create]]
 ### DONE [[Crashboards International]] start-up pitch #speech outline
-
+### Results from [[Chemistry IA]]
 ## [[Connect]]
 ### NOW YPD broth request on [[Aug 3rd, 2020]] 
 
