Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -32,6 +32,8 @@
 ## [[Create]]
 ## [[Connect]]
 ## [[Consume]]
+### TODO Chemistry Acids and Bases
+### Continued to take notes and read [[Book - Rich Dad Poor Dad]] 
 ## [[Cerebrate]]
 ## [[Coordinate]]
 ## [[Consolidate]]
