Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -27,8 +27,12 @@
 ## [[Consolidate]]
 ### TODO #NIBBLE for [[Biology IA]]
 # Aug 2nd, 2020
+## **Quote of the day**: "Action is not something that is sparked by motivation. Motivation is something sparked by action. Do the action, and motivation shall follow you on its own."
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ## [[Morning Pages]]
+### I have woken up #fresh today. I think everyone wakes up fresh. But today has to be different. I have not worked for shit sake in the last two days. I need to get some work done. Though I have added stuff to the todo list and stuff, I am scared that the one break I take after Supriyo Uncle's class will be the break I never wanted.
+### Never mid that. The action plan for today is to digest some of my #NIBBLE . The more I think of it, the more nessacary it becomes. Plus this is not something that is going to be taking ages, it will at max take one hour.
+### One more thing that I realised while [[Jul 31st, 2020]] class with [[Latha Ma'am]] is that there is some fear. There is the fear of starting out. I do not have any other way. I must just do it. You need to remember: "Action is not something that is sparked by motivation. Motivation is something sparked by action. Do the action, and motivation shall follow you on its own."
 ## [[Create]]
 ## [[Connect]]
 ## [[Consume]]
