--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -34,6 +34,8 @@
 ### Never mid that. The action plan for today is to digest some of my #NIBBLE . The more I think of it, the more nessacary it becomes. Plus this is not something that is going to be taking ages, it will at max take one hour.
 ### One more thing that I realised while [[Jul 31st, 2020]] class with [[Latha Ma'am]] is that there is some fear. There is the fear of starting out. I do not have any other way. I must just do it. You need to remember: "Action is not something that is sparked by motivation. Motivation is something sparked by action. Do the action, and motivation shall follow you on its own."
 ## [[Create]]
+### Make some sort of functioning resonance calendar system
+### Read [[The power of the weekly review - Ali Abdaal]]
 ## [[Connect]]
 ## [[Consume]]
 ### TODO Chemistry Acids and Bases
