Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -36,6 +36,7 @@
 ## [[Create]]
 ### Make some sort of functioning [[Resonance Calendar]] system
 ### Read [[The power of the weekly review - Ali Abdaal]]
+### TODO [[Crashboards International]] speech draft 1
 ## [[Connect]]
 ## [[Consume]]
 ### TODO Chemistry Acids and Bases
