Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -49,6 +49,9 @@
 ### 4:45 - finished setting up Journal + started math
 ### 5:45 - break from math
 ### 6:15 - IA's stuff
+### 7:15 - [[Supriyo Uncle]]
+### 11:00 - End + end
+### 1:00 - #sleep ,lol
 # Aug 3rd, 2020
 # Aug 4th, 2020
 # Aug 5th, 2020
