Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -2,7 +2,7 @@
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ### - To update or push updates to GitHub, just copy the top title and tag with the “—“
 ## [[Morning Pages]]
-### I really want to get the [[CrashBoards International]] speech. That is on my mind. Moreover, I want this day ti to be something that I keep for 'housekeeping'. lol. There are several times that I think why #logseq is something that I gravitate towards very closely.
+### I really want to get the CrashBoards International start up pitch speech. That is on my mind. Moreover, I want this day ti to be something that I keep for 'housekeeping'. lol. There are several times that I think why #logseq is something that I gravitate towards very closely.
 ### I like the way how I just changed the topic. I am a master at this
 ### There is a perticular incidence that I want to reveal. This event made my heart feel #warm from the inside.
 #### This event includes Riddhi. I am not sure if I am spelling out her name right, but what a hero!
@@ -34,7 +34,6 @@
 ### Never mid that. The action plan for today is to digest some of my #NIBBLE . The more I think of it, the more nessacary it becomes. Plus this is not something that is going to be taking ages, it will at max take one hour.
 ### One more thing that I realised while [[Jul 31st, 2020]] class with [[Latha Ma'am]] is that there is some fear. There is the fear of starting out. I do not have any other way. I must just do it. You need to remember: "Action is not something that is sparked by motivation. Motivation is something sparked by action. Do the action, and motivation shall follow you on its own."
 ## [[Create]]
-### TODO [[Crashboards International]] speech draft 1
 ### DONE Make some sort of functioning [[Resonance Calendar]] system
 
 ### Read [[The power of the weekly review - Ali Abdaal]]
