Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -44,6 +44,7 @@
 ### Had some crazy methi malai matar, lol! #foodie
 ## [[Cerebrate]]
 ## [[Coordinate]]
+### Clear or all acid and base doubts with [[Latha Ma'am]] on [[Aug 6th, 2020]] when we have class
 ## [[Consolidate]]
 ## Timestamps
 ### 4:10 - wake up
