Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -44,7 +44,7 @@
 ### Had some crazy methi malai matar, lol! #foodie
 ## [[Cerebrate]]
 ## [[Coordinate]]
-### Clear or all acid and base doubts with [[Latha Ma'am]] on [[Aug 6th, 2020]] when we have class
+### Clear or all acid and base doubts with [[Latha Ma'am]] on [[Aug 6th, 2020]] when we have class. The file is named "CONFUSION".
 ## [[Consolidate]]
 ## Timestamps
 ### 4:10 - wake up
@@ -55,6 +55,7 @@
 ### 11:00 - End + end
 ### 1:00 - #sleep ,lol
 ### 5:00 - Wake up + brush + shower
+### 6:00 - starting with work
 # Aug 3rd, 2020
 # Aug 4th, 2020
 # Aug 5th, 2020
