--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -56,6 +56,7 @@
 ### 1:00 - #sleep ,lol
 ### 5:00 - Wake up + brush + shower
 ### 6:00 - starting with work
+### 7:15 - 'Financial learning' break
 # Aug 3rd, 2020
 # Aug 4th, 2020
 # Aug 5th, 2020
