--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -40,7 +40,7 @@
 ## [[Connect]]
 ## [[Consume]]
 ### TODO Chemistry Acids and Bases
-### Continued to take notes and read [[Book - Rich Dad Poor Dad]]
+### Continued to take notes [[Book - Rich Dad Poor Dad]]
 ### Had some crazy methi malai matar, lol! #foodie
 ## [[Cerebrate]]
 ## [[Coordinate]]
