Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -57,6 +57,13 @@
 ### 5:00 - Wake up + brush + shower
 ### 6:00 - starting with work
 ### 7:15 - 'Financial learning' break
+## Release of [Assessment Calendar 2020 - Semester 2](https://www.mygiis.org/PG-SmartCampus/upload/Assessment%20Calendar%202020_Year%202.pdf)
+### [[Aug 24th, 2020]] 1 week to Chemistry
+### [[Aug 27th, 2020]] 1 week to Economics
+### [[Aug 31st, 2020]] 1 Week to Maths
+### [[Sep 2nd, 2020]] 1 Week to English
+### [[Sep 4th, 2020]] 1 Week to Biology
+### 
 # Aug 3rd, 2020
 # Aug 4th, 2020
 # Aug 5th, 2020
