Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -58,6 +58,10 @@
 ### 6:00 - starting with work
 ### 7:15 - 'Financial learning' break
 ## Release of [Assessment Calendar 2020 - Semester 1](https://www.mygiis.org/PG-SmartCampus/upload/Assessment%20Calendar%202020_Year%202.pdf) [[Semester 1 Dates]]
+   :PROPERTIES:
+   :CUSTOM_ID: 5f26c368-2aa6-4c89-b6d1-da3ce0e34482
+   :END:
+
 ### [[Aug 24th, 2020]] 1 week to Chemistry
 ### [[Aug 27th, 2020]] 1 week to Economics
 ### [[Aug 31st, 2020]] 1 Week to Maths
