Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -14,9 +14,10 @@
 ### DONE [[Crashboards International]] start-up pitch #speech outline
 ### Results from [[Chemistry IA]]
 ## [[Connect]]
-### NOW YPD broth request on [[Aug 3rd, 2020]] 
+#### DONE YPD broth request on [[Aug 3rd, 2020]]
 
-
+##### Good Morning Ma'am. For my Biology IA, I was in need of YPD Broth which we have no stock of in school. Ma'am, would it possible for the school to purchase the broth?
+##### Thank you ma'am!
 ### [[Supriyo Uncle]] class set for [[Aug 2nd, 2020]] 
 ### TODO Message [[Pandey Sir]] for hindi class online
 ## [[Consume]]
@@ -70,7 +71,15 @@
 ### [[Sep 4th, 2020]] 1 Week to Biology
 ### [[Sep 10th, 2020]] 1 Week to Hindi
 # Aug 3rd, 2020
-## 
+## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
+## [[Morning Pages]]
+## [[Create]]
+## [[Connect]]
+## [[Consume]]
+### TODO 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
+## [[Cerebrate]]
+## [[Coordinate]]
+## [[Consolidate]] 
 # Aug 4th, 2020
 # Aug 5th, 2020
 # Aug 6th, 2020
