Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -79,6 +79,7 @@
 ### TODO 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
 ## [[Cerebrate]]
 ## [[Coordinate]]
+### Start up pitch meeting with [[Adithya]] [[Ayush]]
 ## [[Consolidate]] 
 # Aug 4th, 2020
 # Aug 5th, 2020
