Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -18,6 +18,7 @@
 
 ##### Good Morning Ma'am. For my Biology IA, I was in need of YPD Broth which we have no stock of in school. Ma'am, would it possible for the school to purchase the broth?
 ##### Thank you ma'am!
+##### RESPONSE: Wow! She gave a really prompt response. She said that the broth should be available by [[Aug 17th, 2020]].
 ### [[Supriyo Uncle]] class set for [[Aug 2nd, 2020]] 
 ### TODO Message [[Pandey Sir]] for hindi class online
 ## [[Consume]]
@@ -73,6 +74,8 @@
 # Aug 3rd, 2020
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ## [[Morning Pages]]
+### What re morning pages? It is a creative excerise to let go off what you have on your mind. That is what it is. in its entirity.
+### 
 ## [[Create]]
 ## [[Connect]]
 ## [[Consume]]
