Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -20,10 +20,11 @@
 ##### Thank you ma'am!
 ##### RESPONSE: Wow! She gave a really prompt response. She said that the broth should be available by [[Aug 17th, 2020]].
 ### [[Supriyo Uncle]] class set for [[Aug 2nd, 2020]] 
-### TODO Message [[Pandey Sir]] for hindi class online
+### CANCELED  Message [[Pandey Sir]] for hindi class online
 ## [[Consume]]
 ### Started reading [[Book - Rich Dad Poor Dad]] by [[Robert T. Kiyosaki]]
 ### [[Latha Ma'am]] class
+#### Class went well. There was the realisation that I need to overcome the fear of starting.
 ## [[Cerebrate]]
 ## [[Coordinate]]
 ## [[Consolidate]]
