--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -75,15 +75,17 @@
 # Aug 3rd, 2020
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ## [[Morning Pages]]
-### What re morning pages? It is a creative excerise to let go off what you have on your mind. That is what it is. in its entirity.
-### 
 ## [[Create]]
 ## [[Connect]]
 ## [[Consume]]
 ### TODO 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
 ## [[Cerebrate]]
 ## [[Coordinate]]
-### Start up pitch meeting with [[Adithya]] [[Ayush]]
+### NOW Start up pitch meeting with [[Adithya]] [[Ayush]]
+
+
+
+
 ## [[Consolidate]] 
 # Aug 4th, 2020
 # Aug 5th, 2020
