Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -81,12 +81,11 @@
 ### TODO 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
 ## [[Cerebrate]]
 ## [[Coordinate]]
-### NOW Start up pitch meeting with [[Adithya]] [[Ayush]]
-
-
-
-
-## [[Consolidate]] 
+### TODO Fix start up pitch meeting with [[Adithya]] [[Ayush]] for [[Aug 3rd, 2020]] 
+## [[Consolidate]]
+## Timestamps
+### 6:45 - Wake up + big wee wee
+### Till 7:45 - Housekeeping + setting up #logseq pages
 # Aug 4th, 2020
 # Aug 5th, 2020
 # Aug 6th, 2020
