Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -77,8 +77,17 @@
 ## [[Morning Pages]]
 ## [[Create]]
 ## [[Connect]]
+## TODO [[Ruchi Didi]]
+## [[Sonu Didi]]
+## [[Soniya Didi]]
+## [[Chanchal Didi]]
+## [[Lovy Didi]]
 ## [[Consume]]
 ### TODO 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
+### Read the weekly ARTICLE - 3 Nice Quotes: Ali Abdaal
+### Read up on the [[APACMed Forum 2020]] on [[Sep 24th, 2020]]
+#### Link to [APACMed Forum 2020](https://www.apacmedvirtualforum.com)
+#### [[Sep 17th, 2020]] A week to APACMed Forum 2020
 ## [[Cerebrate]]
 ## [[Coordinate]]
 ### TODO Fix start up pitch meeting with [[Adithya]] [[Ayush]] for [[Aug 3rd, 2020]] 
