Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -77,11 +77,12 @@
 ## [[Morning Pages]]
 ## [[Create]]
 ## [[Connect]]
-## TODO [[Ruchi Didi]]
-## [[Sonu Didi]]
-## [[Soniya Didi]]
-## [[Chanchal Didi]]
-## [[Lovy Didi]]
+### Rakshabandhan Messages
+##### TODO [[Ruchi Didi]]
+##### TODO [[Sonu Didi]]
+#### TODO [[Soniya Didi]]
+#### TODO [[Chanchal Didi]]
+#### TODO [[Lovy Didi]]
 ## [[Consume]]
 ### TODO 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
 ### Read the weekly ARTICLE - 3 Nice Quotes: Ali Abdaal
