Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -76,13 +76,21 @@
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ## [[Morning Pages]]
 ## [[Create]]
+### Noting [[Meeting Id's]]
 ## [[Connect]]
 ### Rakshabandhan Messages
-##### TODO [[Ruchi Didi]]
-##### TODO [[Sonu Didi]]
-#### TODO [[Soniya Didi]]
-#### TODO [[Chanchal Didi]]
-#### TODO [[Lovy Didi]]
+   :PROPERTIES:
+   :CUSTOM_ID: 5f27532b-927c-421c-a235-bf869e1be8aa
+   :END:
+
+#### **Message:** Hello Didi! Rakshabandhan ki bahut bahut bhadhaiya! Hum Rakhi pehen lege! 🙏
+#### DONE [[Ruchi Didi]]
+
+#### TODO [[Sonu Didi]]
+#### DONE [[Soniya Didi]]
+
+#### DONE [[Chanchal Didi]]
+
 ### TODO Fix start up pitch meeting with [[Adithya]] [[Ayush]] for [[Aug 3rd, 2020]] 
 ## [[Consume]]
 ### TODO 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
@@ -94,8 +102,13 @@
 ## [[Coordinate]]
 ## [[Consolidate]]
 ## Timestamps
+
 ### 6:45 - Wake up + big wee wee
 ### Till 7:45 - Housekeeping + setting up #logseq pages
+### Till 8:00 - Figuring out who all to message
+### 8:00 to 9:00 - Economics 14 + breakfast + sending ((5f27532b-927c-421c-a235-bf869e1be8aa))
+
+4
 # Aug 4th, 2020
 # Aug 5th, 2020
 # Aug 6th, 2020
