Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -86,7 +86,8 @@
 #### **Message:** Hello Didi! Rakshabandhan ki bahut bahut bhadhaiya! Hum Rakhi pehen lege! 🙏
 #### DONE [[Ruchi Didi]]
 
-#### TODO [[Sonu Didi]]
+#### DONE [[Sonu Didi]]
+
 #### DONE [[Soniya Didi]]
 
 #### DONE [[Chanchal Didi]]
