Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -94,7 +94,8 @@
 
 ### TODO Fix start up pitch meeting with [[Adithya]] [[Ayush]] for [[Aug 3rd, 2020]] 
 ## [[Consume]]
-### TODO 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
+### NOW 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
+
 ### Read the weekly ARTICLE - 3 Nice Quotes: Ali Abdaal
 ### Read up on the [[APACMed Forum 2020]] on [[Sep 24th, 2020]]
 #### Link to [APACMed Forum 2020](https://www.apacmedvirtualforum.com)
