Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -77,7 +77,7 @@
 ## [[Morning Pages]]
 ## [[Create]]
 ### Noting [[Meeting Id's]]
-### ARTICLE - COVID-19: Emerging and Future Challenges for Dental and Oral Medicine
+### [[ARTICLE - COVID-19: Emerging and Future Challenges for Dental and Oral Medicine]]
 ## [[Connect]]
 ### Rakshabandhan Messages
    :PROPERTIES:
