Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -77,7 +77,8 @@
 ## [[Morning Pages]]
 ## [[Create]]
 ### Noting [[Meeting Id's]]
-### [[ARTICLE - COVID-19: Emerging and Future Challenges for Dental and Oral Medicine]]
+### Read a part of [[ARTICLE - COVID-19: Emerging and Future Challenges for Dental and Oral Medicine]] #NIBBLE
+### Watched [[VIDEO - Ninja Nerd Lectures COVID-19 April Update]] 
 ## [[Connect]]
 ### Rakshabandhan Messages
    :PROPERTIES:
