Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -77,8 +77,8 @@
 ## [[Morning Pages]]
 ## [[Create]]
 ### Noting [[Meeting Id's]]
-### Read a part of [[ARTICLE - COVID-19: Emerging and Future Challenges for Dental and Oral Medicine]] #NIBBLE
-### Watched [[VIDEO - Ninja Nerd Lectures COVID-19 April Update]] 
+### TODO #DIGEST [[ARTICLE - COVID-19: Emerging and Future Challenges for Dental and Oral Medicine]]
+### TODO #DIGEST [[VIDEO - Ninja Nerd Lectures COVID-19 April Update]]
 ## [[Connect]]
 ### Rakshabandhan Messages
    :PROPERTIES:
