Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -94,7 +94,8 @@
 
 #### DONE [[Chanchal Didi]]
 
-### TODO Fix start up pitch meeting with [[Adithya]] [[Ayush]] for [[Aug 3rd, 2020]] 
+### TODO [[Crashboards International]] start up pitch meeting with [[Adithya]] [[Ayush]] for [[Aug 3rd, 2020]]
+### [[Pandey Sir]] class on 
 ## [[Consume]]
 ### NOW 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
 
