--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -95,7 +95,7 @@
 #### DONE [[Chanchal Didi]]
 
 ### TODO [[Crashboards International]] start up pitch meeting with [[Adithya]] [[Ayush]] for [[Aug 3rd, 2020]]
-### [[Pandey Sir]] class on 
+### TODO Fix hindi class date
 ## [[Consume]]
 ### NOW 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
 
