Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -94,7 +94,7 @@
 
 #### DONE [[Chanchal Didi]]
 
-### TODO [[Crashboards International]] start up pitch meeting with [[Adithya]] [[Ayush]] for [[Aug 3rd, 2020]]
+### TODO [[Crashboards International]] start  up pitch meeting with [[Adithya]] [[Ayush]] for [[Aug 3rd, 2020]]
 ### TODO Fix hindi class date
 ## [[Consume]]
 ### NOW 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
@@ -104,14 +104,28 @@
 #### Link to [APACMed Forum 2020](https://www.apacmedvirtualforum.com)
 #### [[Sep 17th, 2020]] A week to APACMed Forum 2020
 ## [[Cerebrate]]
-## [[Coordinate]]
+## [[Coordinate]
 ## [[Consolidate]]
+### TODO [[Supriyo Uncle]] Math Questions on [[Aug 4th, 2020]] 
+]
 ## Timestamps
 
 ### 6:45 - Wake up + big wee wee
 ### Till 7:45 - Housekeeping + setting up #logseq pages
 ### Till 8:00 - Figuring out who all to message
-### 8:00 to 9:00 - Economics 14 + breakfast + sending ((5f27532b-927c-421c-a235-bf869e1be8aa))
+### 8:00 to 9:00 - Economics 14 + breakfas
+## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
+## [[Morning Pages]]
+## [[Create]]
+### TODO Finish leftover tasks
+### TODO Finalise the CrashBoards speech for [[Adithya]] 
+## [[Connect]]
+### TODO Fix time for pitch rehearsal meeting
+## [[Consume]]
+## [[Cerebrate]]
+## [[Coordinate]]
+## [[Consolidate]]
+t + sending ((5f27532b-927c-421c-a235-bf869e1be8aa))
 
 4
 # Aug 4th, 2020
