Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -96,8 +96,10 @@
 
 ### TODO [[Crashboards International]] start  up pitch meeting with [[Adithya]] [[Ayush]] for [[Aug 3rd, 2020]]
 ### TODO Fix hindi class date
-## [[Consume]]
-### NOW 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine)
+## [[Consume]
+### DONE 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine). In reality, I also watched a video regarding this. LOL
+
+)
 
 ### Read the weekly ARTICLE - 3 Nice Quotes: Ali Abdaal
 ### Read up on the [[APACMed Forum 2020]] on [[Sep 24th, 2020]]
@@ -117,8 +119,9 @@
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ## [[Morning Pages]]
 ## [[Create]]
-### TODO Finish leftover tasks
-### TODO Finalise the CrashBoards speech for [[Adithya]] 
+### DONE Finish leftover tasks
+### NOW Finalise the CrashBoards speech for [[Adithya]] 
+
 ## [[Connect]]
 ### TODO Fix time for pitch rehearsal meeting
 ## [[Consume]]
