Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -120,7 +120,7 @@
 ## [[Morning Pages]]
 ## [[Create]]
 ### DONE Finish leftover tasks
-### NOW Finalise the CrashBoards speech for [[Adithya]] 
+### DONE Finalise the CrashBoards speech for [[Adithya]] 
 
 ## [[Connect]]
 ### TODO Fix time for pitch rehearsal meeting
