Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -120,8 +120,10 @@
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ## [[Morning Pages]]
 ## [[Create]]
-### DONE Finish leftover tasks
-### DONE Finalise the CrashBoards speech for [[Adithya]] 
+### DONE Finish leftover task
+### DONE Finalise the CrashBoards speech for [[Adithya]]
+### TODO Read [[The Handmaid's Tale]] + take down quotesdxdcdddcdcdcdcdx
+ 
 
 ## [[Connect]]
 ### TODO Fix time for pitch rehearsal meeting
