Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -122,7 +122,7 @@
 ## [[Create]]
 ### DONE Finish leftover task
 ### DONE Finalise the CrashBoards speech for [[Adithya]]
-### TODO Read [[The Handmaid's Tale]] + take down quotesdxdcdddcdcdcdcdx
+### TODO Read [[The Handmaid's Tale]] + take down quotes
  
 
 ## [[Connect]]
