Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -95,8 +95,8 @@
 #### DONE [[Chanchal Didi]]
 
 ### DONE [[Crashboards International]] start up pitch meeting with [[Adithya]] [[Ayush]] for [[Aug 3rd, 2020]]
-
-### TODO Fix hindi class date
+### CANCELED Fix hindi class date
+e
 ## [[Consume]
 ### DONE 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine). In reality, I also watched a video regarding this. LOL
 
