Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -123,6 +123,7 @@ e
 ### DONE Finish leftover task
 ### DONE Finalise the CrashBoards speech for [[Adithya]]
 ### TODO Read [[The Handmaid's Tale]] + take down quotes
+### Created ((**Procedure**))
  
 
 ## [[Connect]]
