Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -122,7 +122,7 @@ e
 ## [[Create]]
 ### DONE Finish leftover task
 ### DONE Finalise the CrashBoards speech for [[Adithya]]
-### TODO Read [[The Handmaid's Tale]] + take down quotes
+### TODO Read [[The Handmaid's Tale]] + take down quotes as much as you can
 ### Worked on [[Chemistry IA]] and [[Biology IA]] 
  
 
