Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -116,18 +116,23 @@ e
 ### 6:45 - Wake up + big wee wee
 ### Till 7:45 - Housekeeping + setting up #logseq pages
 ### Till 8:00 - Figuring out who all to message
-### 8:00 to 9:00 - Economics 14 + breakfas
+### 8:00 to 9:00 - Economics 14 + breakfa
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
-## [[Morning Pages]]
+## [[Crashboards International]] Start-up Pitch Review
+## 
+]
 ## [[Create]]
 ### DONE Finish leftover task
 ### DONE Finalise the CrashBoards speech for [[Adithya]]
-### TODO Read [[The Handmaid's Tale]] + take down quotes as much as you can
+### DONE Read [[The Handmaid's Tale]] + take down quotes as much as you can
+
 ### Worked on [[Chemistry IA]] and [[Biology IA]] 
  
 
-## [[Connect]]
-### TODO Fix time for pitch rehearsal meeting
+## [[Connec
+### DONE Fix time for pitch rehearsal meeting
+### [[Aug 5th, 2020]] 5pm IA meeting with [[Abhimanyu]]
+ing
 ## [[Consume]]
 ## [[Cerebrate]]
 ## [[Coordinate]]
