Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -119,7 +119,7 @@ e
 ### 8:00 to 9:00 - Economics 14 + breakfa
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ## [[Crashboards International]] Start-up Pitch Review
-## 
+### [[Adithya]] laughed during our moc presenta
 ]
 ## [[Create]]
 ### DONE Finish leftover task
@@ -135,8 +135,20 @@ e
 ing
 ## [[Consume]]
 ## [[Cerebrate]]
-## [[Coordinate]]
+## [[Coordi
 ## [[Consolidate]]
+##
+## Good Evening Ma'am,
+## I am in group B and I am not supposed to come to school this week. Maam, I have an urgent meeting to do with regard to my EE supervisor for which I would need to come to school.
+## I request you to approve and allow me to come to come to school tomorrow.
+## Thank YOU ma'am
+## 
+## Good Evening Ma'am,
+## My child (Yash Agrawal IB YR 2C) is in group B and am not supposed to come to school this week. He has an urgent meeting to do with regard to the extended essay with his supervisor for which he would need to come to school.
+## I request you to approve and allow him to come to come to school tomorrow.
+## Regards,
+## Manish Agrawal (Parent of Yash Agrawal)
+date]]
 t + sending ((5f27532b-927c-421c-a235-bf869e1be8aa))
 
 4
