Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -138,12 +138,19 @@ ing
 ## [[Coordi
 ## [[Consolidate]]
 ##
-## Good Evening Ma'am,
 ## I am in group B and I am not supposed to come to school this week. Maam, I have an urgent meeting to do with regard to my EE supervisor for which I would need to come to school.
 ## I request you to approve and allow me to come to come to school tomorrow.
 ## Thank YOU ma'am
 ## 
 ## Good Evening Ma'am,
+##
+## My Son Yash Agrawal, IB Yr 2C, is in Group B. Cause of Covid-19 precautions he is attending Virtual Classes this week.
+##
+## He has to meet Sarvili Maam for his Biology Extended Essay, where he is stuck to move further without her help. Maam has asked him to meet tomorrow for discussion.
+##
+## So can we request you to allow Yash to attend school tomorrow physically, so that he can meet up with Sarvili maam and make his Essay move forward.
+##
+## 
 ## My child (Yash Agrawal IB YR 2C) is in group B and am not supposed to come to school this week. He has an urgent meeting to do with regard to the extended essay with his supervisor for which he would need to come to school.
 ## I request you to approve and allow him to come to come to school tomorrow.
 ## Regards,
