Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -119,7 +119,8 @@ e
 ### 8:00 to 9:00 - Economics 14 + breakfa
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
 ## [[Crashboards International]] Start-up Pitch Review
-### [[Adithya]] laughed during our moc presenta
+### The fucking show din't even happen. Those fucker who put some understanding up their arses din' t even show up; those motherfuckers.
+### Quite surprisingly they did reply. I want to put in the entire email once it comes it from [[Adithya]] 
 ]
 ## [[Create]]
 ### DONE Finish leftover task
@@ -130,22 +131,22 @@ e
  
 
 ## [[Connec
-### DONE Fix time for pitch rehearsal meeting
+### DONE Fix time for pitch rehearsal meetin
 ### [[Aug 5th, 2020]] 5pm IA meeting with [[Abhimanyu]]
+### Meeting with [[Srivalli Maam]] [[Aug 5th, 2020]]
+### Rescheduled [[Crashboards International]] pitch
+#### TODO Review pricing and number of courses
+]]
 ing
 ## [[Consume]]
 ## [[Cerebrate]]
 ## [[Coordi
 ## [[Consolidate]]
-## RANDOM
-## Good Evening Ma'am,
-## My Son Yash Agrawal, IB Yr 2C, is in Group B. Cause of Covid-19 precautions he is attending Virtual Classes this week.
-## He has to meet Sarvili Maam for his Biology Extended Essay, where he is stuck to move further without her help. Maam has asked him to meet tomorrow for discussion.
-## So can we request you to allow Yash to attend school tomorrow physically, so that he can meet up with Sarvili maam and make his Essay move forward.
-##
-## 
-## Regards,
-## Manish Agrawal (Parent of Yash Agrawal)
+## RANDOM Banter
+### Good Evening Ma'am,
+### My Son Yash Agrawal, IB Yr 2C, is in Group B. Cause of Covid-19 precautions he is attending Virtual Classes this week.
+### He has to meet Sarvili Maam for his Biology Extended Essay, where he is stuck to move further without her help. Maam has asked him to meet tomorrow for discussion.
+### So can we request you to allow Yash to attend school tomorrow physically, so that he can meet up with Sarvili maam and make his Essay move forward.
 date]]
 t + sending ((5f27532b-927c-421c-a235-bf869e1be8aa))
 
