Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -148,7 +148,9 @@ ing
 ### He has to meet Sarvili Maam for his Biology Extended Essay, where he is stuck to move further without her help. Maam has asked him to meet tomorrow for discussion.
 ### So can we request you to allow Yash to attend school tomorrow physically, so that he can meet up with Sarvili maam and make his Essay move forward.
 date]]
-t + sending ((5f27532b-927c-421c-a235-bf869e1be8aa))
+t + send
+## TODO Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
+ing ((5f27532b-927c-421c-a235-bf869e1be8aa))
 
 4
 # Aug 4th, 2020
