Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -149,7 +149,15 @@ ing
 ### So can we request you to allow Yash to attend school tomorrow physically, so that he can meet up with Sarvili maam and make his Essay move forward.
 date]]
 t + send
+## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
+## Morning Pages
+## 
 ## TODO Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
+## For [[Crashboards International]]
+### TODO Review pricing/timeline
+## TIMESTAMPS
+### 6:00 - Wake up
+### 06:49 - Wee wee + sleep w/ [[Mom]] 
 ing ((5f27532b-927c-421c-a235-bf869e1be8aa))
 
 4
