Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -150,11 +150,16 @@ ing
 date]]
 t + send
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
-## Morning Pages
-## 
-## TODO Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
-## For [[Crashboards International]]
-### TODO Review pricing/timeline
+## [[Morning Pages]] 
+## [[Create]] 
+### TODO Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
+### For [[Crashboards International]]
+#### TODO Review pricing/timeline
+## [[Connect]] 
+## [[Consume]] 
+## [[Cerebrate]] 
+## [[Coordinate]] 
+## [[Consolidate]] 
 ## TIMESTAMPS
 ### 6:00 - Wake up
 ### 06:49 - Wee wee + sleep w/ [[Mom]] 
