Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -150,6 +150,8 @@ ing
 date]]
 t + send
 ## Your daily reminder - Don't ignore your dreams; work as hard you can; say what you can; cultivate friendships; be happy.
+## [[Crashboards International]] PITCH REVIEW
+## [[Extended Essay]] call review with [[Srivalli Maam]] 
 ## [[Morning Pages]] 
 ## [[Create]] 
 ### For [[Crashboards International]]
