Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -96,21 +96,16 @@
 
 ### DONE [[Crashboards International]] start up pitch meeting with [[Adithya]] [[Ayush]] for [[Aug 3rd, 2020]]
 ### CANCELED Fix hindi class date
-e
 ## [[Consume]
 ### DONE 1 article from [Cardiology & Cardiovascular Medicine](https://journals.sagepub.com/cardiology-cardiovascular-medicine). In reality, I also watched a video regarding this. LOL
-
-)
-
 ### Read the weekly ARTICLE - 3 Nice Quotes: Ali Abdaal
 ### Read up on the [[APACMed Forum 2020]] on [[Sep 24th, 2020]]
 #### Link to [APACMed Forum 2020](https://www.apacmedvirtualforum.com)
 #### [[Sep 17th, 2020]] A week to APACMed Forum 2020
 ## [[Cerebrate]]
-## [[Coordinate]
+## [[Coordinate]] 
 ## [[Consolidate]]
 ### TODO [[Supriyo Uncle]] Math Questions on [[Aug 4th, 2020]] 
-]
 ## Timestamps
 
 ### 6:45 - Wake up + big wee wee
@@ -121,7 +116,6 @@ e
 ## [[Crashboards International]] Start-up Pitch Review
 ### The fucking show din't even happen. Those fucker who put some understanding up their arses din' t even show up; those motherfuckers.
 ### Quite surprisingly they did reply. I want to put in the entire email once it comes it from [[Adithya]] 
-]
 ## [[Create]]
 ### DONE Finish leftover task
 ### DONE Finalise the CrashBoards speech for [[Adithya]]
