Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -121,17 +121,14 @@
 ### DONE Finalise the CrashBoards speech for [[Adithya]]
 ### DONE Read [[The Handmaid's Tale]] + take down quotes as much as you can
 
-### Worked on [[Chemistry IA]] and [[Biology IA]] 
- 
-
-## [[Connec
+### Worked on [[Chemistry IA]] and [[Biology IA]]
+## [[Connect]] 
 ### DONE Fix time for pitch rehearsal meetin
 ### [[Aug 5th, 2020]] 5pm IA meeting with [[Abhimanyu]]
 ### Meeting with [[Srivalli Maam]] [[Aug 5th, 2020]]
 ### Rescheduled [[Crashboards International]] pitch
-#### TODO Review pricing and number of courses
-]]
-ing
+#### DONE Review pricing and number of courses
+
 ## [[Consume]]
 ## [[Cerebrate]]
 ## [[Coordi
@@ -149,9 +146,11 @@ t + send
 ## [[Morning Pages]] 
 ## [[Create]] 
 ### For [[Crashboards International]]
-#### TODO Review pricing/timeline
+#### DONE Review pricing/timeline
+
 ## [[Connect]] 
-### TODO Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
+### DONE Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
+
 ## [[Consume]] 
 ## [[Cerebrate]] 
 ## [[Coordinate]] 
