Logseq auto save

--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -105,7 +105,8 @@
 ## [[Cerebrate]]
 ## [[Coordinate]] 
 ## [[Consolidate]]
-### TODO [[Supriyo Uncle]] Math Questions on [[Aug 4th, 2020]] 
+### DONE [[Supriyo Uncle]] Math Questions on [[Aug 4th, 2020]] 
+
 ## Timestamps
 
 ### 6:45 - Wake up + big wee wee
@@ -131,7 +132,7 @@
 
 ## [[Consume]]
 ## [[Cerebrate]]
-## [[Coordi
+## [[Coordinate]]
 ## [[Consolidate]]
 ## RANDOM Banter
 ### Good Evening Ma'am,
