--- a/journals/2020_08.md
+++ b/journals/2020_08.md
@@ -141,14 +141,7 @@
 ### So can we request you to allow Yash to attend school tomorrow physically, so that he can meet up with Sarvili maam and make his Essay move forward.
 date]]
 t + send
-# Aug 4th, 2020
-# Aug 5th, 2020
-# Aug 6th, 2020
-# Aug 7th, 2020
-# Aug 8th, 2020
-# Aug 9th, 2020
-# Aug 10th, 2020
-# Aug 11th, 2020
+ 2020
 # Aug 12th, 2020
 # Aug 13th, 2020
 # Aug 14th, 2020
@@ -161,11 +154,8 @@ t + send
 # Aug 21st, 2020
 # Aug 22nd, 2020
 # Aug 23rd, 2020
-# Aug 24th, 2020
-# Aug 25th, 2020
-# Aug 26th, 2020
-# Aug 27th, 2020
-# Aug 28th, 2020
-# Aug 29th, 2020
-# Aug 30th, 2020
-# Aug 31st, 2020
+# Au
+## [[Connect]]DONE Review [[Extended Essay]] proposal before [[Srivalli Maam]] comes online
+## 
+## 
+## 
